Bug 1510080 - Fix appending into a fragmented fieldset. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D13079